Header design started

--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -2,4 +2,4 @@ $font: 'Noto Sans', sans-serif;
 $color-primary: #FF8600;
 $color-secondary: #F1F2F6;
 $color-tertiary: #AEB8FE;
-$color-primary-hover: #cc6d00;
+$color-primary-hover: #da7400;
