--- a/src/style/TranslatePage.scss
+++ b/src/style/TranslatePage.scss
@@ -50,6 +50,14 @@
 
                         * {
                             cursor: pointer;
+
+                            &:hover {
+                                background-color: initial;
+                            }
+
+                            .MuiTouchRipple-root {
+                                display: none;
+                            }
                         }
                     }
                 }
