--- a/src/style/Navbar.scss
+++ b/src/style/Navbar.scss
@@ -34,7 +34,7 @@
             .logoText {
                 color: v.$color-secondary;
                 font-size: 1.5rem;
-                font-family: v.$font;
+                font-family: v.$font-title;
                 display: flex;
                 align-items: center;
                 letter-spacing: 0.1rem;
@@ -75,7 +75,7 @@
                     text-transform: none;
                     width: 120px;
                     font-size: 1.3rem;
-                    font-family: v.$font;
+                    font-family: v.$font-title;
                     color: v.$color-secondary;
                     margin: 0 10px;
                     padding: 10px 20px;
