--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,9 @@
 // font-family: 'Noto Sans', sans-serif;
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap');
 
+// font-family: 'Inter', sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
     background-color: v.$color-secondary;
 }
