--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,4 +1,5 @@
-$font: 'Noto Sans', sans-serif;
+$font-title: 'Noto Sans', sans-serif;
+$font-text: 'Inter', sans-serif;
 $color-primary: #FF8600;
 $color-secondary: #F1F2F6;
 $color-tertiary: #AEB8FE;
