Started homepage design

--- a/src/style/Navbar.scss
+++ b/src/style/Navbar.scss
@@ -14,7 +14,10 @@
 
     &[data-homepage=true] {
         position: sticky;
-        bottom: 0;
+        inset: 0;
+        width: 100%;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
         transform: none;
     }
 
