--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,6 +1,6 @@
 $font-title: 'Noto Sans', sans-serif;
 $font-text: 'Inter', sans-serif;
 $color-primary: #FF8600;
-$color-secondary: #F1F2F6;
+$color-secondary: #fff8f0;
 $color-tertiary: #AEB8FE;
 $color-primary-hover: #da7400;
